--- a/DailyReport/project.json
+++ b/DailyReport/project.json
@@ -3,8 +3,11 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.ComputerVision.Activities": "[2.0.1]",
     "UiPath.Excel.Activities": "[2.6.2]",
+    "UiPath.GoogleVision.Activities": "[1.1.0]",
     "UiPath.Mail.Activities": "[1.5.1]",
+    "UiPath.MicrosoftVision.Activities": "[2.1.0]",
     "UiPath.System.Activities": "[19.7.0]",
     "UiPath.UIAutomation.Activities": "[19.7.0]"
   },
